fix: don't report runtime @JavaScript modules as missing from the bundle
warnForUnavailableBundledDependencies collected every non-external
@JavaScript value, including type=MODULE ones. Those are deliberately
kept out of the bundle by both scanners, so in production mode a
component with a bare relative type=MODULE value logged an error saying
the file "was not included when creating the production bundle" and that
"the component will not work properly" — a false positive for a value
that works fine as a runtime <script type="module">. type=MODULE values
are now filtered out before the bundle check.

Also:

- addExternalDependencies checks the unsupported INLINE + MODULE
  combination before normalizing the value, so it is reported for values
  that normalization would reject (e.g. a path traversal) instead of
  being silently skipped.
- The @JavaScript class Javadoc described only the legacy bundling
  behavior and never mentioned type(); it now covers the runtime MODULE
  path and links the new Page.addJavaScript overload. Fixes the two
  'javscript' typos on the same lines.
- Sonar: use Stream.toList() in RuntimeJavaScriptDependencyTest and hoist
  getPage() out of the assertThrows lambda in DependencyListTest.

The production-mode tests capture the log while scanning against a
pretend bundle that contains neither test file, and include a type=SCRIPT
control so the "no error logged" assertion cannot pass vacuously.